fixes client stories on mobile

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -6,7 +6,7 @@
 }
 
 .about {
-    margin-top: 10rem;
+    margin-top: 6rem;
 
     p, li {
         font-size: 1.4rem;
