--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -222,10 +222,6 @@
                 height: initial;
                 margin-top: 1rem;
             }
-
-            .overlay__dropdown-link {
-                padding: 15px;
-            }
         }
 
 
