--- a/src/sass/_testimonials-page.scss
+++ b/src/sass/_testimonials-page.scss
@@ -25,3 +25,13 @@
         margin: 1rem auto;
     }
 }
+
+@media (max-width: 800px) {
+    .testimonials-page {
+        padding: 1rem;
+        .page {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
+    }
+}
